--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="preload" as="image" href="images/serruriervillemomble.webp" />
   <link rel="stylesheet" href="font/stylesheet.css" />
   <link href="css/style.min.css" rel="stylesheet" />
-  <link href="images/logo.png" rel="icon" />
+  <link href="images/fav.png" rel="icon" />
   <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -110,7 +110,7 @@
     <div class="hero-overlay"></div>
     <div class="container">
       <div class="row align-items-center" id="hero-row">
-        <div class="col-12 col-lg-8">
+        <div class="col-12 col-lg-8 ms-auto">
           <div class="hero-content">
             <h1 class="hero-title">Serrurier Guyancourt 78280</h1>
             <h2 class="my-3">Meilleur Serrurier Guyancourt</h2>
@@ -128,29 +128,30 @@
             <div class="d-flex icon-list">
               <ul>
                 <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
+                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
                     loading="lazy" />Ouverture de porte claquée
                 </li>
                 <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
+                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
                     loading="lazy" />Réparation de serrure
                 </li>
                 <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
+                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
                     loading="lazy" />Remise en état après effraction
                 </li>
               </ul>
               <ul>
+                  <li class="mb-2">
+                    <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
+                      loading="lazy" />Blindage de porte
+                  </li>
                 <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
-                    loading="lazy" />Blindage de porte
-                </li>
-                <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
+                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
                     loading="lazy" />Changement de serrure
                 </li>
+              
                 <li class="mb-2">
-                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.svg"
+                  <img alt="check icon" class="img-fluid icon me-3" width="20" height="20" src="images/check.png"
                     loading="lazy" />Déblocage de rideaux métalliques
                 </li>
               </ul>
@@ -243,7 +244,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Blindage de Porte</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">219</span>
                 </div>
@@ -264,7 +265,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Pose de Serrure 3pts A2P</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">169</span>
                 </div>
@@ -285,7 +286,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Pose de serrure 5 points carénée</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">289</span>
                 </div>
@@ -306,7 +307,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Gonds renforcés blindés</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">229</span>
                 </div>
@@ -327,7 +328,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Installation de Portail</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">380</span>
                 </div>
@@ -348,7 +349,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Installation de rideaux métalliques</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">420</span>
                 </div>
@@ -369,7 +370,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Pose Serrure Connectée</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">389</span>
                 </div>
@@ -390,7 +391,7 @@
             <div class="price-card-content">
               <h3 itemprop="name">Porte Blindée</h3>
               <div itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center price-num">
                   <span>€</span>
                   <span itemprop="price">690</span>
                 </div>
